--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone {
-  border: 1px dashed var(--stroke-default);
+  border: 2px dashed transparent;
+  outline: 1px dashed var(--stroke-default);
   border-radius: 0.5rem;
   display: grid;
   justify-items: center;
@@ -26,8 +27,7 @@
 
   &:hover,
   &:has(input:focus) {
-    border-width: 2px;
-    border-color: var(--stroke-highlight);
+    outline: 2px dashed var(--stroke-highlight);
     background-color: var(--surface-secondary);
 
     & svg path {
